--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Экоселение Родное</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
-    <link href="css/style.css" rel="stylesheet">
-
+    <link href="build/css/style.css" rel="stylesheet">
     <!-- Fonts -->
     <!-- Open Sans for body font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -25,12 +24,6 @@
 </head>
 
 <body>
-
-    <!-- BEGAIN PRELOADER -->
-    <!-- <div id="preloader">
-        <div class="loader">&nbsp;</div>
-    </div> -->
-    <!-- END PRELOADER -->
 
     <!-- SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
