--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!-- Pacifico for 404 page   -->
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -37,8 +39,8 @@
                     <h2 class="header-title">Экоселение <br/>
                         <span>Родное</span>
                     </h2>
-                    <a href="#" class="header-btn button button-default" data-text="ПРИСОЕДИНИТЬСЯ">
-                        <span>Присоединиться</span>
+                    <a href="#" class="header-btn button button-default">
+                        Присоединиться
                     </a>
                 </div>
             </div>
@@ -67,7 +69,6 @@
                         <li><a href="#about">О проекте</a></li>
                         <li><a href="#service">Землепользование</a></li>
                         <li><a href="#map">Место</a></li>
-                        <li><a href="#team">О нас</a></li>
                         <li><a href="#contacts">Контакты</a></li>
                     </ul>
                 </div>
@@ -89,6 +90,7 @@
                             <br/> Нам надоела городская суета, шум и бессмыслица.
                             <br/> И мы понимаем , что <span class="highlight-text">уровень жизни</span> и <span class="highlight-text">качество жизни</span> – это вовсе не одно и то же.
                         </p>
+                        <iframe class="video" src="https://player.vimeo.com/video/213354211" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         <div class="welcome-content">
                             <div class="title-area">
                                 <h2 class="tittle">Мы предлагаем</h2>
@@ -122,11 +124,11 @@
                     <!-- End welcome area -->
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-12">
                     <div class="about-area">
                         <div class="row">
-                            <div class="col-md-5 col-sm-6 col-xs-12">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="about-left wow fadeInLeft">
                                     <img src="img/about-img.jpg" alt="img">
                                 </div>
@@ -148,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- End about section -->
@@ -334,91 +336,6 @@
     </section>
     <!-- End Map section -->
 
-
-    <!-- Start Team action -->
-    <section id="team">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="team-area">
-                        <div class="title-area">
-                            <h2 class="tittle">О нас</h2>
-                            <span class="tittle-line"></span>
-                            <p>Мы - люди, которые хотят начать новую жизнь на СВОЕЙ земле. При этом , при желании , не рвать связей с городом. </p>
-                        </div>
-                        <!-- Start team content -->
-                        <div class="team-content">
-                            <ul class="team-grid">
-                                <li>
-                                    <div class="team-item team-img-1 wow fadeInUp">
-                                        <div class="team-info">
-                                            <p> I must explain to you how all this mistaken idea of denouncing pleasure n</p>
-                                            <a href="#"><span class="fa fa-facebook"></span></a>
-                                            <a href="#"><span class="fa fa-twitter"></span></a>
-                                            <a href="#"><span class="fa fa-pinterest"></span></a>
-                                            <a href="#"><span class="fa fa-rss"></span></a>
-                                        </div>
-                                    </div>
-                                    <div class="team-address">
-                                        <p>John Richerd</p>
-                                        <span>CEO & Founder</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="team-item team-img-2 wow fadeInUp">
-                                        <div class="team-info">
-                                            <p> I must explain to you how all this mistaken idea of denouncing pleasure n</p>
-                                            <a href="#"><span class="fa fa-facebook"></span></a>
-                                            <a href="#"><span class="fa fa-twitter"></span></a>
-                                            <a href="#"><span class="fa fa-pinterest"></span></a>
-                                            <a href="#"><span class="fa fa-rss"></span></a>
-                                        </div>
-                                    </div>
-                                    <div class="team-address">
-                                        <p>MIKE BATTON</p>
-                                        <span>Co-founder</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="team-item team-img-3 wow fadeInUp">
-                                        <div class="team-info">
-                                            <p> I must explain to you how all this mistaken idea of denouncing pleasure n</p>
-                                            <a href="#"><span class="fa fa-facebook"></span></a>
-                                            <a href="#"><span class="fa fa-twitter"></span></a>
-                                            <a href="#"><span class="fa fa-pinterest"></span></a>
-                                            <a href="#"><span class="fa fa-rss"></span></a>
-                                        </div>
-                                    </div>
-                                    <div class="team-address">
-                                        <p>JOHN VICK</p>
-                                        <span>Developer</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="team-item team-img-4 wow fadeInUp">
-                                        <div class="team-info">
-                                            <p> I must explain to you how all this mistaken idea of denouncing pleasure n</p>
-                                            <a href="#"><span class="fa fa-facebook"></span></a>
-                                            <a href="#"><span class="fa fa-twitter"></span></a>
-                                            <a href="#"><span class="fa fa-pinterest"></span></a>
-                                            <a href="#"><span class="fa fa-rss"></span></a>
-                                        </div>
-                                    </div>
-                                    <div class="team-address">
-                                        <p>ROB HANSOM</p>
-                                        <span>Senior designer</span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- End team content -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Start Team action -->
-
     <!-- Start from blog section -->
     <section id="contacts">
         <div class="container">
@@ -470,7 +387,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/plugins/bootstrap.js"></script>
     <!-- Slick Slider -->
-    <script type="text/javascript" src="js/plugins/slick.js"></script> -->
+    <script type="text/javascript" src="js/plugins/slick.js"></script>
     <!-- Counter -->
     <script type="text/javascript" src="js/plugins/waypoints.js"></script>
     <script type="text/javascript" src="js/plugins/jquery.counterup.js"></script>
@@ -479,10 +396,10 @@
     <!-- Add fancyBox -->
     <script type="text/javascript" src="js/plugins/jquery.fancybox.pack.js"></script>
     <!-- Wow animation -->
-    <script type="text/javascript" src="js/plugins/wow.js"></script> -->
+    <script type="text/javascript" src="js/plugins/wow.js"></script>
 
     <!-- Custom js -->
-    <script type="text/javascript" src="js/plugins/custom.js"></script>
+    <!-- <script type="text/javascript" src="js/plugins/custom.js"></script> -->
 
 
 </body>
