--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span>Родное</span>
                 <img src="/img/rodnoe.png" alt="Родное">
             </h2>
-            <a href="#contacts" class="header-btn">
+            <a href="article.html" class="header-btn">
                 Присоединиться
             </a>
         </div>
@@ -45,10 +45,11 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav main-nav menu-scroll">
-                        <li class="active"><a href="index.html">В начало</a></li>
-                        <li><a href="#about">О проекте</a></li>
-                        <li><a href="#service">Землепользование</a></li>
-                        <li><a href="#map">Место</a></li>
+                        <li class="active"><a href="index.html">Главная</a></li>
+                        <li><a href="#">Усадьба</a></li>
+                        <li><a href="#">Труд в экопоселении</a></li>
+                        <li><a href="#">Юридические вопросы</a></li>
+                        <li><a href="#">Место</a></li>
                         <li><a href="#contacts">Контакты</a></li>
                     </ul>
                 </div>
@@ -56,7 +57,7 @@
         </nav>
     </section>
 
-    <section id="about">
+    <section id="welcome">
         <div class="container">
             <div class="welcome-area">
                 <p class="welcome-area__text">
@@ -154,9 +155,9 @@
     <section id="contacts">
         <div class="container">
             <div class="contacts-area clearfix">
+                <h2 class="contacts-title">Стать участником проекта</h2>
                 <!-- form -->
                 <div class="contacts-form">
-                    <h2 class="card-title">Стать участником проекта</h2>
                     <form action="https://formspree.io/asalisinasa@gmail.com" method="POST">
                         <!-- <input type="hidden" name="_next" value="//site.io/thanks.html"/> -->
                         <input class="contacts-text-field" type="text" name="name" placeholder="Ваше имя" id="name" value="" required>
@@ -173,21 +174,8 @@
 
     <!-- initialize jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/plugins/bootstrap.js"></script>
-    <!-- Slick Slider -->
-    <script type="text/javascript" src="js/plugins/slick.js"></script>
-    <!-- Counter -->
-    <script type="text/javascript" src="js/plugins/waypoints.js"></script>
-    <script type="text/javascript" src="js/plugins/jquery.counterup.js"></script>
-    <!-- mixit slider -->
-    <script type="text/javascript" src="js/plugins/jquery.mixitup.js"></script>
-    <!-- Add fancyBox -->
-    <script type="text/javascript" src="js/plugins/jquery.fancybox.pack.js"></script>
     <!-- Wow animation -->
     <script type="text/javascript" src="js/plugins/wow.js"></script>
-
-    <!-- Custom js -->
-    <!-- <script type="text/javascript" src="js/plugins/custom.js"></script> -->
 
 
 </body>
