--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span>Родное</span>
                 <img src="/img/rodnoe.png" alt="Родное">
             </h2>
-            <a href="article.html" class="header-btn  green-btn">
+            <a href="index.html#contacts" class="header-btn  green-btn">
                 Присоединиться
             </a>
         </div>
@@ -81,7 +81,7 @@
                         <p class="welcome-area__card-text card-text">
                             Достаток Вы получите от участия в Партнерской программе - без отрыва от «производства»,  2-3 часа в неделю по выходным - и через год Вы строите дом на СВОЕЙ ЗЕМЛЕ!
                         </p>
-                        <a class="welcome-area__card-btn card-btn" href="#">Подробнее</a>
+<!--                        <a class="welcome-area__card-btn card-btn" href="#">Подробнее</a>-->
                      </div>
                      <div class="welcome-area__footer">
                           ПРИХОДИТЕ! <br>РОДНАЯ  ЗЕМЛЯ  ЖДЕТ  ВАС!
@@ -102,7 +102,7 @@
                     <p class="card-text">
                         Участие в партнерской программе «РОДНЫЕ СОСЕДИ» обеспечит Вам необходимые средства для строительства. Стоимость материалов – 10 тыс. руб. / кв. м.  Дом строят селяне сообща под руководством мастера. Цель: максимально «умное», энергоэффективное, автономное жилье, требующее минимальных затрат на отопление и содержание.
                     </p>
-                    <a class="card-btn" href="#">Подробнее</a>
+<!--                    <a class="card-btn" href="#">Подробнее</a>-->
                 </div>
             </div>
             <div class="card  card--greens">
@@ -114,7 +114,7 @@
                         <p class="card-text">
                             Мин. годовая производительность – 60 тонн продукции (овощей, фруктов, ягод, зелени и пр.) Общий возможный годовой доход от СБВ-1200: до 15 млн руб.
                         </p>
-                        <a class="card-btn" href="#">Подробнее</a>
+<!--                        <a class="card-btn" href="#">Подробнее</a>-->
                     </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
                     <p class="card-text">
                         Исходя из этого,предлагается следующая схема юридического оформления.
                     </p>
-                    <a class="card-btn" href="#">Подробнее</a>
+<!--                    <a class="card-btn" href="#">Подробнее</a>-->
                 </div>
             </div>
         </div>
