--- a/important.html
+++ b/important.html
@@ -39,7 +39,7 @@
                         <li><a href="location.html">Местоположение</a></li>
                         <li class="active"><a href="important.html">Особенности</a></li>
                         <li><a href="shahovskaya.html">о Шаховской</a></li>
-                        <li><a href="possibility.html">дополнительные возможности</a></li>
+<!--                        <li><a href="possibility.html">дополнительные возможности</a></li>-->
                         <li><a href="index.html#contacts">Обратная связь</a></li>
                     </ul>
                 </div>
