--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <li><a href="location.html">Местоположение</a></li>
                         <li><a href="important.html">Особенности</a></li>
                         <li><a href="shahovskaya.html">о Шаховской</a></li>
-                        <li><a href="possibility.html">возможности</a></li>
+<!--                        <li><a href="possibility.html">возможности</a></li>-->
                         <li><a href="index.html#contacts">Контакты</a></li>
                     </ul>
                 </div>
@@ -128,9 +128,11 @@
                     <p class="card-text">
                         Наша земля относится в настоящее время к категории земель сельхозназначения. В  настоящее время исключительно  на территории КФХ (крестьянско-фермерское хозяйство) разрешены постройки не сельскохозяйственного назначения. Минимальный размер надела под КФХ – 2 Га.
                     </p>
+<!--
                     <p class="card-text">
                         Исходя из этого,предлагается следующая схема юридического оформления.
                     </p>
+-->
 <!--                    <a class="card-btn" href="#">Подробнее</a>-->
                 </div>
             </div>
@@ -148,6 +150,7 @@
                         с деревней Ховань. 3 км от Верхнерузского водохранилища
                         130 км от Москвы
                     </p>
+                    <a class="card-btn" href="location.html">Подробнее</a>
                 </div>
             </div>
             <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d285564.5766402651!2d35.168519120002024!3d56.00181593611563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ca0ebda16628c3%3A0x8af61af0beff1032!2z0KjQsNGF0L7QstGB0LrQvtC5INGALdC9LCDQnNC-0YHQutC-0LLRgdC60LDRjyDQvtCx0Lsu!5e0!3m2!1sru!2sru!4v1476734883339" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
