--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                         <li><a href="wellbeing.html">НаРождение</a></li>
                         <li class="active"><a href="about.html">О Проекте</a></li>
                         <li><a href="location.html">Местоположение</a></li>
-                        <li><a href="important.html">Обязательно к ознакомлению</a></li>
+                        <li><a href="important.html">Особенности</a></li>
                         <li><a href="shahovskaya.html">о Шаховской</a></li>
 <!--                        <li><a href="possibility.html">дополнительные возможности</a></li>-->
                         <li><a href="index.html#contacts">Обратная связь</a></li>
