--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <li><a href="important.html">Особенности</a></li>
                         <li><a href="shahovskaya.html">о Шаховской</a></li>
 <!--                        <li><a href="possibility.html">возможности</a></li>-->
-                        <li><a href="index.html#contacts">Контакты</a></li>
+                        <li><a href="index.html#contacts">Обратная связь</a></li>
                     </ul>
                 </div>
             </div>
