--- a/index.html
+++ b/index.html
@@ -63,18 +63,42 @@
         <div class="container">
             <div class="welcome-area">
                 <p class="welcome-area__text">
-                    Нами двигают поиск гармонии, качественной жизни и нового старта.
+                    Нами движет поиск гармонии и новой, свободной жизни. 
                     <br/> Нас волнуют вопросы экологии и качество продуктов, которые мы едим.
-                    <br/> Нам надоела городская суета, <br/> шум и бессмыслица.
-                    <br/> И мы понимаем , что уровень жизни и качество жизни – это вовсе не одно и то же.
+                    <br/> Нам надоела городская суета, <br/> шум и рутина.
+                    <br/> И мы понимаем, что уровень жизни и качество жизни – это вовсе не одно и то же.
                 </p>
                 <iframe class="video" src="https://player.vimeo.com/video/213354211" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 <div class="welcome-area__card card">
-                    <h2 class="welcome-area__card-title card-title">ВОЗМОЖНОСТИ ПРОЕКТА</h2>
+                    <h2 class="welcome-area__card-title card-title">Концепция</h2>
                     <div class="welcome-area__card-inner card-inner">
                         <p class="welcome-area__card-text card-text">
-                            Партнерская программа «РОДНЫЕ СОСЕДИ» позволяет осуществить плавный переход из рутины городского социума в СЧАСТЛИВУЮ ЖИЗНЬ.
+                            Создание ЭКО-селения «РОДНОЕ» ориентировано на:
                         </p>
+                        <ul class="card-list">
+                            <li>
+                                ☼ Образование Родовых поместий на базе формы государственной регистрации КФХ – Крестьянское Фермерское Хозяйство (аналог ИП в с/х деятельности)
+                                 <!-- – Подробнее по ссылке (доп.страничка на Юр.вопросы – ответы) -->
+                            </li>
+                            <li>
+                                ☼ Производство ЭКО-продукции на биогумусе в СБВ (Солнечный Био-Вегетарий)
+                            </li>
+                            <li>
+                                ☼ Строительство верми ферм при каждом СБВ для производства биогумуса
+                            </li>
+                            <li>
+                                ☼ Здоровый образ жизни
+                            </li>
+                            <li>
+                                ☼ Здоровое воспитание и образование детей
+                            </li>
+                            <li>
+                                ☼ Добрососедство
+                            </li>
+                            <li>
+                                ☼ Самообеспечение и прибыльное хозяйство
+                            </li>
+                        </ul>
                         <p class="welcome-area__card-text card-text">
                             Не нужно РИСКОВАТЬ: продавать квартиру, бросать работу и ехать в неизвестность, брать кредит, иметь в запасе миллионы на покупку участка, постройку дома и достойное начало деятельности на своей земле!
                         </p>
@@ -96,25 +120,33 @@
             <div class="card  card--house">
                 <h2 class="card-title">Ваша родовая усадьба</h2>
                 <div class="card-inner">
-                    <p class="card-text  card-text--center">
-                        Дом площадью 100 кв.м. на семью
+                    <p class="card-text">
+                        Ваша мечта – стать основателем родового гнезда, в котором будут жить и трудиться поколения Ваших потомков?
                     </p>
                     <p class="card-text">
-                        Участие в партнерской программе «РОДНЫЕ СОСЕДИ» обеспечит Вам необходимые средства для строительства. Стоимость материалов – 10 тыс. руб. / кв. м.  Дом строят селяне сообща под руководством мастера. Цель: максимально «умное», энергоэффективное, автономное жилье, требующее минимальных затрат на отопление и содержание.
+                        Для этого нужна земля и добротный дом на этой земле, построенный своими руками.
                     </p>
-<!--                    <a class="card-btn" href="#">Подробнее</a>-->
+                    <p class="card-text">
+                        Мы считаем правильным, чтобы селяне – родные соседи – объединились и строили дома друг другу скопом. Это поможет максимально сократить срок возведения постройки, а также объединит и сплотит всех нас.
+                    </p>
+                    <p class="card-text">
+                        К тому же мы уйдем от переплаты за услуги строительных фирм. Кто решит, что лучше заплатить строителям, чем делать самому – ваш выбор и ваше право.
+                    </p>
+                    <p class="card-text">
+                        Наша цель – максимально «умное»,  энергоэффективное, автономное жилье, требующее минимальных затрат на отопление и уход.
+                    </p>
                 </div>
             </div>
             <div class="card  card--greens">
-                <h2 class="card-title">труд в эко-селении</h2>
+                <h2 class="card-title">Труд в Эко-селении</h2>
                     <div class="card-inner">
                         <p class="card-text">
-                            Основная возможность выращивать экологически чистую продукцию круглый год – Солнечный Био-вегетарий – 1200: умная теплица с газовым отоплением, капельным поливом, аккумуляторами тепла и биогумусом в качестве удобрения.
+                            Жизнь на земле, безусловно,  предполагает выращивание различных с/х культур для того, чтобы прокормить себя и свою семью в течение года. Однако, у любого человека сегодня есть еще целый ряд потребностей, для удовлетворения которых нам всем   необходимы и материальные средства. Иными словами, мы должны предусмотреть возможность зарабатывать деньги, не выезжая из Эко-селения. И мы этот вопрос поставили в ряд основных задач Родного.
                         </p>
                         <p class="card-text">
-                            Мин. годовая производительность – 60 тонн продукции (овощей, фруктов, ягод, зелени и пр.) Общий возможный годовой доход от СБВ-1200: до 15 млн руб.
+                            Основная возможность выращивать экологически чистую продукцию в наших широтах круглый год – СБВ - Солнечный Био-вегетарий
                         </p>
-<!--                        <a class="card-btn" href="#">Подробнее</a>-->
+                       <a class="card-btn" href="#">Подробнее</a>
                     </div>
             </div>
         </div>
@@ -123,17 +155,40 @@
     <section id="service">
         <div class="container">
             <div class="card  card--service">
-                <h2 class="card-title">юридические вопросы</h2>
+                <h2 class="card-title">Виды деятельности</h2>
                 <div class="card-inner">
                     <p class="card-text">
-                        Наша земля относится в настоящее время к категории земель сельхозназначения. В  настоящее время исключительно  на территории КФХ (крестьянско-фермерское хозяйство) разрешены постройки не сельскохозяйственного назначения. Минимальный размер надела под КФХ – 2 Га.
+                        Таких видов более 150! Вот лишь некоторые из них:
                     </p>
-<!--
+                    <ul class="card-list">
+                        <li>
+                            ☼ Экологические чистое растениеводство, овощеводство, выращивание рассады, трав и злаков, цветов, декоративных растений
+                        </li>
+                        <li>
+                            ☼ Производство биогумуса, биокомпоста, почвенных смесей
+                        </li>
+                        <li>
+                            ☼ Садоводство, плодопитомник, семеноводство
+                        </li>
+                        <li>
+                            ☼ Пчеловодство. Сбор даров леса:  орехов, ягод, грибов, смолы, берёзового сока, мха, лекарственных растений и т.п.
+                        </li>
+                        <li>
+                            ☼ Молочное животноводство. Сбор и переработка шерсти. Содержание птичника. Разведение лошадей
+                        </li>
+                        <li>
+                            ☼ Тепличное хозяйство. Мельница, пекарня, хлебопекарня. Переработка продукции, консервирование, сушка, изготовление соков, напитков, сыроварение, быстрая заморозка и пр.
+                        </li>
+                        <li>
+                            ☼ Эко-, био- и этнотуризм. Молодежный лагерь. Гостевой дом. Виды деятельности, связанные с информационными технологиями. Научные исследования
+                        </li>
+                        <li>
+                            ☼ Народные празднования. Фестивали. Обучающие семинары. Фриланс. Школа. Народные ремесла. Промыслы. Ярмарка
+                        </li>
+                    </ul>
                     <p class="card-text">
-                        Исходя из этого,предлагается следующая схема юридического оформления.
+                        Каждый найдет себе занятие по душе, приносящее удовольствие, достаток, но в то же время не отнимающее значительную часть жизни, времени и сил, не отвлекающее от семьи: детей, близких.
                     </p>
--->
-<!--                    <a class="card-btn" href="#">Подробнее</a>-->
                 </div>
             </div>
         </div>
@@ -142,26 +197,52 @@
     <section id="location">
         <div class="container">
             <div class="card  card--location">
-                <h2 class="card-title">местоположение</h2>
+                <h2 class="card-title">Возможности проекта</h2>
                 <div class="card-inner">
-                    <h3 class="card-subtitle">НАША ЗЕМЛЯ 108 Га</h3>
                     <p class="card-text">
-                        Шаховской район Московской области, по северу омывается речкой и граничит с райцентром «Шаховская», с запада
-                        с деревней Ховань. 3 км от Верхнерузского водохранилища
-                        130 км от Москвы
+                        Партнерская программа «РОДНЫЕ СОСЕДИ» позволяет осуществить плавный переход из рутины городского социума в СЧАСТЛИВУЮ ЖИЗНЬ
                     </p>
-                    <a class="card-btn" href="location.html">Подробнее</a>
+                    <p class="card-text">
+                        Ее огромное преимущество заключается в том, что Вам НЕ нужно РИСКОВАТЬ:
+                    </p>
+                    <ul class="card-list">
+                        <li>
+                            ☼ продавать квартиру
+                        </li>
+                        <li>
+                            ☼ бросать работу и ехать в неизвестность
+                        </li>
+                        <li>
+                            ☼ брать кредит
+                        </li>
+                        <li>
+                            ☼ иметь в запасе миллионы на покупку участка, постройку дома и достойное начало деятельности на своей земле!
+                        </li>
+                    </ul>
+                    <p class="card-text">
+                        Достаток Вы получите от участия в Партнерской программе: без отрыва от "производства",  2-3 часа в неделю по выходным - и уже через год  Вы сможете построить дом на СВОЕЙ ЗЕМЛЕ!
+                    </p>
+                    <p class="card-text">
+                        В чем же идея Программы?
+                    </p>
+                    <p class="card-text">
+                        А она заключается, прежде всего, в том, что все мы хотим жить в окружении близких нам по духу и мировоззрению людей. Желательно, чтобы это были друзья, хорошо знакомые люди, отношения с которыми проверены временем.
+                    </p>
+                    <p class="card-text">
+                        Так приглашайте этих людей быть Вашими соседями в Эко-селении «Родное»! Вы не только будете жить рядом с ними, но и получите возможность выкупить свою землю и оплатить постройку родовой усадьбы без дополнительных финансовых вложений!
+                    </p>
                 </div>
             </div>
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d285564.5766402651!2d35.168519120002024!3d56.00181593611563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ca0ebda16628c3%3A0x8af61af0beff1032!2z0KjQsNGF0L7QstGB0LrQvtC5INGALdC9LCDQnNC-0YHQutC-0LLRgdC60LDRjyDQvtCx0Lsu!5e0!3m2!1sru!2sru!4v1476734883339" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </section>
 
     <section id="contacts">
         <div class="container">
             <div class="contacts-area clearfix">
-                <p class="contacts-text">Желаете создать своё родовое поместье? <br>Жить в гармонии с природой в кругу единомышленников?</p>
-                <h2 class="contacts-title">Мы ждём именно Вас!</h2>
+                <h2 class="contacts-title">Как это возможно?</h2>
+                <p class="contacts-text">
+                    Подробности Вы можете узнать во время личной беседы при встрече
+                </p>
                 <!-- form -->
                 <div class="contacts-form">
                     <p class="contacts-text  contacts-text--form">Заполните анкету,<br> и мы свяжемся с Вами очень быстро :)</p>
